ΜΑΘΗΜΑΤΑ/ΗΥ-340/PROJECTS/Compiler_Exec/examples/phase_2/Errors/Error9.asc
function foo(x){

   function (){
      x=6;		//Cannot access 'x' inside function (anonymous)
   }
}
